manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dg-uc4p2-language-pilot
  namespace: zhaw
  labels:
    app: dg-uc4p2-language-pilot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dg-uc4p2-language-pilot
  template:
    metadata:
      labels:
        app: dg-uc4p2-language-pilot
    spec:
      hostAliases:
        - ip: "10.98.63.240"
          hostnames:
            - datagems-dev.scayle.es
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: dg-uc4p2-language-pilot
          image: ghcr.io/datagems-eosc/uc4p2-language-pilot:v0.1.12
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"
