manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dg-uc4p2-language-pilot-ingress
  namespace: zhaw
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - datagems-dev.scayle.es
  rules:
    - host: datagems-dev.scayle.es
      http:
        paths:
          - path: /language-pilot(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dg-uc4p2-language-pilot
                port:
                  number: 8080
